# clawforce

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-docs.yml  release-bridge.yml  release-zalo-bridge.yml  release.yml
bridges/whatsapp/: package-lock.json  package.json
bridges/whatsapp/src/: index.ts  server.ts  whatsapp.ts
bridges/zalo/: package-lock.json  package.json  zca-js-2.1.1.tgz
bridges/zalo/src/: index.ts  server.ts  zalo.ts
clawbot/: README.md  __init__.py  cli.py  pyproject.toml
clawbot/agent/: __init__.py  approval.py  consolidator.py  context.py  memory.py  runtime.py  skills.py  subagent.py
clawbot/agent/loop/: __init__.py  core.py  mcp.py  session.py  tools.py
clawbot/agent/tools/: __init__.py  a2a.py  cron.py  filesystem.py  mcp.py  message.py  plan.py  registry.py  shell.py  software_exec.py  spawn.py  web.py
clawbot/core/: __init__.py  admin.py  evaluator.py  heartbeat.py  session.py  software.py  utils.py
clawbot/core/config/: __init__.py  engine.py  loader.py  sanitize.py  schema.py
clawbot/core/cron/: __init__.py  service.py
clawbot/providers/: __init__.py  chatgpt_provider.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py  registry.py  schema_compat.py
clawbot/skills/: README.md
clawbot/skills/summarize/: SKILL.md
clawbot/skills/tmux/: SKILL.md
clawbot/skills/tmux/scripts/: find-sessions.sh
clawbot/templates/: __init__.py  resolver.py
clawbot/worker/: app.py  context.py  lifespan.py  provision.py  resolve.py  runtime.py
clawbot/worker/handlers/: __init__.py  admin.py  config.py  filesystem.py  schema.py  skill.py  software.py
clawforce/: README.md  __init__.py  app.py  auth.py  cli.py  deps.py  oauth_callback_server.py  pyproject.toml
clawforce-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
clawforce-ui/src/: App.tsx  index.css  main.tsx
clawforce-ui/src/components/: ClawIcon.tsx  CreateClawModal.tsx  CreatePlanModal.tsx  CreateTaskModal.tsx  EditTaskModal.tsx  ErrorBoundary.tsx  InstallMcpModal.tsx  InstallSkillModal.tsx  InstallSoftwareModal.tsx  Layout.tsx  Modal.tsx  ModelSelect.tsx  OnboardingWizardModal.tsx  TaskDetailModal.tsx  TemplateDetailModal.tsx
clawforce-ui/src/components/agent-detail/: AgentHeader.tsx  ChannelConfiguration.tsx  LogsViewer.tsx  MCPServerManager.tsx  TerminalPanel.tsx  constants.ts  types.ts
clawforce-ui/src/components/ui/: Badge.tsx  Button.tsx
clawforce-ui/src/lib/: api.ts  queries.ts  types.ts
clawforce-ui/src/pages/: AdminSettings.tsx  AgentDetail.tsx  ClawsList.tsx  ConfigEditor.tsx  Login.tsx  Marketplace.tsx  PlanBoard.tsx  PlansList.tsx
clawforce/apis/: auth.py  config.py  control.py  logs.py  mcp_registry.py  plan_workspace.py  plans.py  providers.py  skills.py  software.py  terminal.py  webhooks.py  workspace.py
clawforce/apis/agents/: _schemas.py  a2a.py  crud.py  templates.py
clawforce/core/: audit.py  authz.py  database.py  plan_access.py  secrets.py
clawforce/core/domain/: __init__.py  agent.py  plan.py  runtime.py
clawforce/core/runtimes/: __init__.py  _worker_runtime.py  docker.py  factory.py  local.py
clawforce/core/services/: workspace_service.py
clawforce/core/storage/: __init__.py  project_data.py
clawforce/core/store/: __init__.py  activity_events.py  agent_config.py  agent_variables.py  agents.py  base.py  plan_artifacts.py  plan_workspace.py  plans.py  process_logs.py  users.py
clawforce/static/: index.html
clawforce/static/assets/: index-0YTpRxD_.js  index-4LtT-ICA.js  index-B2_0mz5b.js  index-B8eNm0fC.css  index-BC5uuVOh.js  index-BWPrHEpi.css  index-BavQOu5T.css  index-BmnrvCk2.css  index-BqEX9Z4W.css  index-BsT2Ck9N.js  index-BxnjbCUW.js  index-C-QOEErM.css  index-C11-Bd6b.css  index-CE6b20uj.js  index-CGEJISBl.js  index-CKnw2NAA.css  index-CKs7k_hG.js  index-CUZwLzEB.css  index-CqCWBZ2i.js  index-D34bZ6iv.js  index-DRE-WYlB.css  index-DX8qxodw.js  index-DZTvE5Y4.js  index-Da_vwtto.js  index-DbY_n3e8.js  index-DvQvhzsN.js  index-IM6l1sgP.js  index-_VDvPNSF.js  index-jfLqoHB_.css  index-lzKJRv87.js  index-zemNFeYY.js
clawlib/: README.md  __init__.py  pyproject.toml
clawlib/channels/: __init__.py  base.py  discord.py  email.py  feishu.py  manager.py  slack.py  teams.py  telegram.py  whatsapp.py  zalo.py  zalouser.py
clawlib/config/: helpers.py  loader.py  schema.py
clawlib/mcpregistry/: __init__.py  client.py  official_mcp.py
clawlib/registry/: __init__.py  factory.py  protocols.py
clawlib/skillregistry/: __init__.py  skills_sh.py
clawlib/softwareregistry/: __init__.py  yaml_catalog.py
clawlib/storage/: __init__.py  base.py  local.py  s3.py
deploy/: Dockerfile  entrypoint.sh
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: style.css
docs/guide/: channels.md  configuration.md  plans.md  principles.md  quickstart.md  security.md
docs/reference/: terminology.md
marketplace/roles/: README.md
marketplace/roles/business-analyst/profile/: AGENTS.md
marketplace/roles/ceo/profile/: AGENTS.md
marketplace/roles/cto/profile/: AGENTS.md
marketplace/softwares/: catalog.yaml
scripts/: clawforce  dev.sh  install.cmd  install.ps1  install.sh
tests/: __init__.py  conftest.py  test_agent_config_store.py  test_agent_variables_store.py  test_clawbot_bus.py  test_clawbot_channels.py  test_clawbot_providers.py  test_clawbot_session.py  test_clawbot_tools.py  test_clawforce_api.py  test_clawforce_auth.py  test_clawforce_domain.py  test_clawforce_runtime.py  test_clawforce_services.py  test_clawlib_activity.py  test_clawlib_config.py  test_clawlib_storage.py  test_control_plane.py  test_crud_overrides.py  test_docker.sh
(+101 files in other folders)
